Adding the notebooks with the deeplearning models (thesis CODE)

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -7,8 +7,9 @@ corpora:
 queries:
     folder: "path/to/folder"
 pipeline:
-    - BM25:
+    - BM25_ES:
         top_k: 2500
+        address: "http://193.136.175.98:8125"
         tokenizer:
             Regex:
                 stem: true
