--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,11 +1,12 @@
 mode: "train"
-cache_folder: "/backup/IR/cache"
+cache_folder: "data" #"/backup/IR/cache"
 corpora:
-    name: "bioasq"
-    folder: "/backup/pubmed_archive_json/pubmed_small.tar.gz" #corresponds to the tar.gz file
+    name: "small_bioasq"
+    folder: "data\\pubmed_small.tar.gz" #/backup/pubmed_archive_json/pubmed_small.tar.gz
     files_are_compressed: true #(optinal) default is false
 queries:
-    folder: "/backup/BioASQ-training7b"
+    train_file: "data\\small_train.json" #/backup/BioASQ-training7b
+    validation_file: "data\\small_validation.json"
 pipeline:
     - BM25_ES:
         top_k: 2500
@@ -30,4 +31,5 @@ pipeline:
             num_negative_samples: 4
         tokenizer:
             Regex:
+                n_process: 20
                 stem: false
