--- a/config_example.yaml
+++ b/config_example.yaml
@@ -17,22 +17,27 @@ pipeline:
                 stem: true
     - DeepRank:
         top_k: 10
+        tokenizer:
+            Regex:
+                n_process: 20
+                stem: false
         embedding:
             FastText:
                 trainable: false
-                path: "data\\emb"
+                path: "data\\fast_text.bin"
         input_network:
             Q: 13 #number max of query tokens
             P: 5 #number max of snippets per query token
             S: 15 #number max of snippet tokens
-        measure_network: "MeasureNetwork" #class name of the measure network
+        measure_network:
+            MeasureNetwork:
+                filters: 100 # class name of the measure network
+                kernel:
+                    - 3 #x
+                    - 3 #y
         aggregation_network: "AggregationNetwork" #class name of the aggregation network
         hyperparameters:
             optimizer: "adadelta" #(optinal) default is AdaDelta
             l2_regularization: 0.0001 #(optinal) default is 0.0001
             num_partially_positive_samples: 3
             num_negative_samples: 4
-        tokenizer:
-            Regex:
-                n_process: 20
-                stem: false
