--- a/config_example.yaml
+++ b/config_example.yaml
@@ -38,7 +38,9 @@ pipeline:
                 kernel:
                     - 3 #x
                     - 3 #y
-        aggregation_network: "AggregationNetwork" #class name of the aggregation network
+        aggregation_network: 
+            AggregationNetwork:
+                activation: "selu"
         hyperparameters:
             optimizer: "adadelta" #(optinal) default is AdaDelta
             l2_regularization: 0.0001 #(optinal) default is 0.0001
