--- a/config_example.yaml
+++ b/config_example.yaml
@@ -22,6 +22,9 @@ pipeline:
             Regex:
                 n_process: 20
                 stem: false
+                sw_file: "data\\stop_words.json"
+                queries_sw: true # stop words
+                articles_sw: false # stop words
         embedding:
             FastText:
                 trainable: false
@@ -43,6 +46,7 @@ pipeline:
             AggregationNetwork:
                 activation: "selu"
         hyperparameters:
+            batch_size: 128
             optimizer: "adadelta" #(optinal) default is AdaDelta
             l2_regularization: 0.0001 #(optinal) default is 0.0001
             num_partially_positive_samples: 3
