--- a/config_example.yaml
+++ b/config_example.yaml
@@ -22,7 +22,7 @@ pipeline:
             Regex:
                 n_process: 20
                 stem: false
-                sw_file: "data\\stop_words.json"
+                sw_file: "tokenizers\\stop_words.json"
                 queries_sw: true # stop words
                 articles_sw: false # stop words
         embedding:
