--- a/config_example.yaml
+++ b/config_example.yaml
@@ -46,8 +46,11 @@ pipeline:
             AggregationNetwork:
                 activation: "selu"
         hyperparameters:
+            epoch: 120
             batch_size: 128
-            optimizer: "adadelta" #(optinal) default is AdaDelta
+            optimizer:
+                name: "adadelta" #(optinal) default is AdaDelta
+                learning_rate: 2
             l2_regularization: 0.0001 #(optinal) default is 0.0001
             num_partially_positive_samples: 3
             num_negative_samples: 4
