deep rank training loop

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -18,6 +18,7 @@ pipeline:
         evaluation: true
     - DeepRank:
         top_k: 10
+        evaluation: true
         tokenizer:
             Regex:
                 n_process: 20
