--- a/config_on_server.yaml
+++ b/config_on_server.yaml
@@ -18,6 +18,7 @@ pipeline:
         evaluation: true
     - DeepRank:
         top_k: 10
+        evaluation: true
         tokenizer:
             Regex:
                 n_process: 20
