--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,116 @@
-pyyaml
+absl-py==0.2.2
+astor==0.7.1
+backcall==0.1.0
+bidict==0.18.0
+bleach==2.1.3
+bllipparser==2016.9.11
+boto==2.49.0
+boto3==1.9.49
+botocore==1.12.49
+bz2file==0.98
+chardet==2.3.0
+Click==7.0
+cloudpickle==0.5.3
+colorama==0.3.9
+cycler==0.10.0
+dask==0.18.2
+decorator==4.3.0
+docutils==0.14
+elasticsearch==7.0.2
+entrypoints==0.2.3
+fasttext==0.9.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+gast==0.2.0
+gensim==3.7.1
+googledrivedownloader==0.3
+graphviz==0.10.1
+grpcio==1.13.0
+h5py==2.8.0
+html5lib==1.0.1
+ijson==2.3
+ipykernel==4.8.2
+ipython==6.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
+itsdangerous==1.1.0
+jedi==0.12.1
+Jinja2==2.10.1
+jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.4.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterthemes==0.20.0
+kiwisolver==1.0.1
+lesscpy==0.13.0
+lxml==4.3.1
+Markdown==2.6.11
+MarkupSafe==1.0
+matplotlib==2.2.2
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+networkx==2.1
+nltk==3.3
+notebook==5.7.4
+numpy==1.14.5
+pandas==0.23.3
+pandocfilters==1.4.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==5.2.0
+ply==3.11
+prometheus-client==0.5.0
+prompt-toolkit==1.0.15
+protobuf==3.6.0
+ptyprocess==0.6.0
+pubmed-parser==0.2.1
+pybind11==2.3.0
+pycurl==7.43.0
+pydot==1.4.1
+pydot-ng==2.0.0
+Pygments==2.2.0
+pygobject==3.20.0
+pyparsing==2.2.0
+python-apt==1.1.0b1+ubuntu0.16.4.1
+python-dateutil==2.7.3
+pytz==2018.5
+PyWavelets==0.5.2
+PyYAML==3.13
+pyzmq==17.0.0
+qtconsole==4.3.1
+requests==2.9.1
+s3transfer==0.1.13
+scikit-image==0.14.0
+scikit-learn==0.19.1
+scipy==1.1.0
+Send2Trash==1.5.0
+sentencepiece==0.1.82
+simplegeneric==0.8.1
+six==1.11.0
+sklearn==0.0
+smart-open==1.7.1
+ssh-import-id==5.5
+tensorboard==1.9.0
+tensorflow==1.9.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+toolz==0.9.0
+tornado==5.0.2
+traitlets==4.3.2
+Unidecode==1.0.23
+urllib3==1.24.1
+vizdoom==1.1.6
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.15.4
+widgetsnbextension==3.2.1
